src/petal/snapshots/petal__petal__parser__tests__unary_prec-2.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"!foo\")"
---
[
    ExprNode {
        expr: Ident(
            IdentId(
                1v1,
            ),
        ),
        span: Span {
            start: Pos(
                1,
            ),
            end: Some(
                Pos(
                    3,
                ),
            ),
        },
    },
    ExprNode {
        expr: PrefixOp {
            op: PrefixOp {
                prefix_type: Not,
                span: Span {
                    start: Pos(
                        0,
                    ),
                    end: Some(
                        Pos(
                            0,
                        ),
                    ),
                },
            },
            right: ExprId(
                1v1,
            ),
        },
        span: Span {
            start: Pos(
                1,
            ),
            end: Some(
                Pos(
                    0,
                ),
            ),
        },
    },
]
