src/petal/snapshots/petal__petal__parser__tests__unary_prec-3.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"!-a\")"
---
[
    ExprNode {
        expr: Ident(
            IdentId(
                1v1,
            ),
        ),
        span: Span {
            start: Pos(
                2,
            ),
            end: Some(
                Pos(
                    2,
                ),
            ),
        },
    },
    ExprNode {
        expr: PrefixOp {
            op: Token {
                token_type: Minus,
                lexeme: "-",
                literal: None,
                span: Span {
                    start: Pos(
                        1,
                    ),
                    end: Some(
                        Pos(
                            1,
                        ),
                    ),
                },
            },
            right: ExprId(
                1v1,
            ),
        },
        span: Span {
            start: Pos(
                2,
            ),
            end: Some(
                Pos(
                    1,
                ),
            ),
        },
    },
    ExprNode {
        expr: PrefixOp {
            op: Token {
                token_type: Bang,
                lexeme: "!",
                literal: None,
                span: Span {
                    start: Pos(
                        0,
                    ),
                    end: Some(
                        Pos(
                            0,
                        ),
                    ),
                },
            },
            right: ExprId(
                2v1,
            ),
        },
        span: Span {
            start: Pos(
                2,
            ),
            end: Some(
                Pos(
                    0,
                ),
            ),
        },
    },
]
