src/petal/snapshots/petal__petal__parser__tests__unary_prec.snap
---
source: src/petal/parser.rs
expression: "parse_expr(\"-ab\")"
---
[
    ExprNode {
        expr: Ident(
            IdentId(
                1v1,
            ),
        ),
        span: Span {
            start: Pos(
                1,
            ),
            end: Some(
                Pos(
                    2,
                ),
            ),
        },
    },
    ExprNode {
        expr: PrefixOp {
            op: Token {
                token_type: Minus,
                lexeme: "-",
                literal: None,
                span: Span {
                    start: Pos(
                        0,
                    ),
                    end: Some(
                        Pos(
                            0,
                        ),
                    ),
                },
            },
            right: ExprId(
                1v1,
            ),
        },
        span: Span {
            start: Pos(
                1,
            ),
            end: Some(
                Pos(
                    0,
                ),
            ),
        },
    },
]
